# VocoSphere

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .mise.toml  .prettierignore  CLAUDE.md  README.md  components.json  design.md  flake.nix  index.html  package.json  pnpm-lock.yaml  subtitle-overlay.html  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: ASR模型配置系统.md  Cargo代理配置.md  Cargo文件锁问题.md  Java_Enum_vs_Rust_Enum对比.md  Java和Rust原子操作对比.md  LazyLock和OnceLock对比.md  Mutex锁机制详解.md  OnceLock和LazyLock详解.md  README.md  Rust与Java并发对比.md  Rust枚举多态vs Java接口多态.md  Rust的Trait与Java的接口对比.md  Serde标签化枚举详解.md  Tokio异步与阻塞任务调度.md  TypeScript_Enum_vs_Rust_Enum对比.md  anyhow错误处理详解.md  const_fn详解.md  expect和问号操作符对比.md  mpsc通道实现原理.md  内部可变性模式详解.md  延迟初始化方案对比.md  日志系统优化_从Mutex到OnceLock.md  日志级别过滤详解.md  编译时初始化vs运行时初始化.md  长字幕分句方案B.md  音频通道生命周期管理.md  项目整理说明.md
scripts/: setup-ffmpeg.ps1  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  subtitle-overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  audio_capture.rs  file_recognition.rs  logger.rs  main.rs  video_subtitle.rs
src-tauri/src/asr/: config.rs  events.rs  mod.rs
src-tauri/src/asr/provider/: cloud.rs  local.rs  mod.rs
src-tauri/src/asr/subtitle/: srt.rs
src-tauri/src/asr/websocket/: common.rs  mod.rs
src-tauri/src/asr/websocket/gummy/: handler.rs  impl_.rs  mod.rs  protocol.rs
src-tauri/src/asr/websocket/paraformer/: handler.rs  impl_.rs  protocol.rs
src-tauri/src/audio/: config.rs  mod.rs  processor.rs
src-tauri/src/utils/: file.rs
(+49 files in other folders)
