[package]
name = "vocosphere"
version = "0.1.0"
description = "VocoSphere"
authors = ["lunma"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["wry"] }
tauri-plugin-shell = { version = "2.0.0" }

cpal = { version = "0.16" } # 音频捕获
rubato = {version = "0.16.2"} # 音频重采样
hound = "3.4.0" # WAV文件处理（用于调试）
# ctrlc = "3.4.5"
# lazy_static = "1.4.0"

serde = { version = "1.0.215", features = ["derive"] } # JSON序列化/反序列化
serde_json = {version = "1.0.135"}

tokio = { version = "1.46.1", features = ["full"] } # 异步运行时
futures = "0.3" # 异步处理
log = "0.4" # 日志接口
anyhow = "1.0.98" # 错误处理

tungstenite = {version = "0.27.0"}
tokio-tungstenite = {version = "0.27.0", features = ["rustls", "__rustls-tls", "connect", "tokio-rustls", "rustls-tls-native-roots"] }
tokio-rustls = "0.26.0"

uuid = { version = "1.17.0",features = ["v4"] }
chrono = "0.4" # 时间处理（用于日志时间戳）

[profile.release]
panic = "abort"             # 发生 panic 时直接终止，提高性能，减小体积
codegen-units = 1           # 仅用一个 codegen 单元，优化最终产物的体积和性能
lto = true                  # 启用链接时优化（Link Time Optimization），进一步优化代码
opt-level = "s"             # 优化编译产物体积（适合桌面应用分发）


